Bug 1720432 - Fix -Wunsed-but-set-variable warnings in dom/media. r=kinetik

dom/media/gmp/GMPSharedMemManager.cpp:54:10: warning: variable 'total' set but not used [-Wunused-but-set-variable]
dom/media/gtest/TestMP3Demuxer.cpp:423:13: warning: variable 'numSamples' set but not used [-Wunused-but-set-variable]

GMPSharedMemManager.cpp updates local variable `total`, but never reads it so we can remove it.

TestMP3Demuxer.cpp updates local variable `numSamples`, but the EXPECT test checks that use `numSamples` are commented out. I don't know how to address the commented-out checks' issues, but testing that numSamples is non-negative seems a safe assumption (and a way to fix the -Wunused-but-set-variable warning).

Differential Revision: https://phabricator.services.mozilla.com/D120799